fix signup options
